# pearls

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
.kiro/specs/pearls/: design.md  requirements.md  tasks.md
crates/pearls-app/: Cargo.toml
crates/pearls-app/src/: compact.rs  error.rs  fsm.rs  ids.rs  lib.rs  list.rs  ready.rs  repo.rs  response.rs  time.rs
crates/pearls-cli/: Cargo.toml
crates/pearls-cli/src/: commands.rs  git.rs  lib.rs  main.rs  output.rs  output_mode.rs  progress.rs  terminal.rs
crates/pearls-cli/src/commands/: close.rs  comments.rs  compact.rs  create.rs  doctor.rs  hooks.rs  import.rs  init.rs  link.rs  list.rs  merge.rs  meta.rs  ready.rs  show.rs  status.rs  sync.rs  unlink.rs  update.rs
crates/pearls-cli/tests/: command_tests.rs  integration_flow_tests.rs  json_flag_tests.rs  output_tests.rs
crates/pearls-core/: Cargo.toml
crates/pearls-core/benches/: performance.rs
crates/pearls-core/src/: config.rs  error.rs  fsm.rs  graph.rs  identity.rs  lib.rs  models.rs  storage.rs
crates/pearls-core/tests/: error_tests.rs  fsm_props.proptest-regressions  fsm_props.rs  fsm_tests.rs  graph_props.rs  graph_tests.rs  identity_props.rs  index_props.rs  models_props.rs  storage_props.rs  storage_tests.rs
crates/pearls-hooks/: Cargo.toml
crates/pearls-hooks/src/: lib.rs  post_merge.rs  pre_commit.rs
crates/pearls-hooks/tests/: hooks_tests.rs
crates/pearls-mcp/: Cargo.toml
crates/pearls-mcp/src/: lib.rs  server.rs  types.rs
crates/pearls-merge/: Cargo.toml
crates/pearls-merge/src/: driver.rs  lib.rs  main.rs  merge.rs
crates/pearls-merge/tests/: merge_tests.rs
docs/: BLOG_POST.md  PEARLS.md  USER-GUIDE.md  WHITEPAPER.md  index.html
examples/: WORKFLOW.md
skills/pearls-cli/: SKILL.md
skills/pearls-cli/agents/: openai.yaml
skills/pearls-cli/references/: architecture.md
