[workspace]
resolver = "2"
members = [
    "crates/pearls-core",
    "crates/pearls-cli",
    "crates/pearls-merge",
    "crates/pearls-hooks", "crates/pearls-app", "crates/pearls-mcp",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Pearls Contributors"]
license = "MIT"
repository = "https://github.com/mrorigo/pearls"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
tabled = "0.15"

# Git integration
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }

# Graph algorithms
petgraph = "0.6"

# Cryptography
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
tempfile = "3.8"
criterion = "0.5"

# Performance
rayon = "1.8"

# File locking
fs2 = "0.4"

# Time
chrono = "0.4"

# MCP protocol
rmcp = "0.14.0"
