[package]
name = "pearls-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pearls-core = { path = "../pearls-core" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
