[package]
name = "pearls-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
petgraph = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
fs2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
