[package]
name = "pearls-merge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pearls-merge"
path = "src/main.rs"

[dependencies]
pearls-core = { path = "../pearls-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
